fixed cards being to small on mobile

--- a/Frontend/bushbass_frontend/src/components/card.css
+++ b/Frontend/bushbass_frontend/src/components/card.css
@@ -18,3 +18,8 @@
   padding: 5px;
   margin-bottom: 18px;
 }
+@media screen and (max-width: 415px) {
+  .card {
+    width: 90%;
+  }
+}
